# ncbi-data-downloader

./: .gitignore  Cargo.toml
src/: cnbi.rs  macros.rs  main.rs  ncbi.rs
