[package]
name = "fastq-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11"}
tokio = {version = "1", features = ["full"]}
bytes = "*"
regex = "1.10"
futures-timer = "*"
serde = {version = "1", features = ["derive"]}
serde_json = "1"